--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-concat": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-less": "~0.6.4",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-consolidate": "~0.1.0",
+    "handlebars": "~1.0.12",
+    "grunt-contrib": "~0.7.0"
   }
 }
